# sessioncast-cli-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/agent/: mod.rs  runner.rs  session_handler.rs
src/commands/: agent.rs  cmd.rs  deps.rs  login.rs  mod.rs  update.rs
src/config/: app_config.rs  mod.rs
src/crypto/: mod.rs
src/tmux/: executor.rs  mod.rs
src/utils/: mod.rs
src/websocket/: client.rs  mod.rs
